# Crypto_AI_agent

./: .replit  README.md  app.py  blockchain_metrics.py  crypto_price_tracker.py  database.py  distributors.py  main.py  models.py  nlp_processor.py  pyproject.toml  robots.txt  scheduler.py  scraper.py
attached_assets/: Pasted-1-Project-Objectives-Automate-News-Collection-Scrape-data-and-articles-from-required-sources-e-g--1735222653054.txt
static/: robots.txt  styles.css
static/js/: crypto-charts.js  market.js
templates/: about.html  ai_analysis.html  ai_risk.html  ai_risk_assessment.html  ai_trading.html  base.html  contact.html  crypto_detail.html  dashboard.html  disclaimer.html  glossary.html  login.html  market.html  portfolio.html  pricing.html  privacy.html  profile.html  register.html  sitemap.xml  term_details.html  terms.html
templates/partials/: article_card.html
