[project]
name = "repl-nix-newsharvester"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "numpy==1.24.3",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot>=21.9",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "spacy==3.5.3",
    "sqlalchemy>=2.0.36",
    "telegram>=0.0.1",
    "trafilatura>=2.0.0",
    "tweepy>=4.14.0",
    "urllib3>=2.3.0",
]
